C2: Missing symbolic info on a call from intrinsics when invoked through MethodHandle

XMLWordPrintable

    • b06
    • Verified

        Crash on a call from intrinsics when invoked through MethodHandle:
           1790 11 b java.lang.invoke.LambdaForm$DMH/0x00000008011c8040::invokeVirtual (20 bytes)
                                    @ 7 java.lang.invoke.DirectMethodHandle::internalMemberName (8 bytes) force inline by annotation
                                    @ 16 java.lang.Object::hashCode (0 bytes) (intrinsic, virtual)
        # To suppress the following error report, specify this argument
        # after -XX: or in .hotspotrc: SuppressErrorAt=/sharedRuntime.cpp:1357
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/Users/vlivanov/ws/jdk/open/jdk/src/hotspot/share/runtime/sharedRuntime.cpp:1357), pid=35476, tid=6915
        # assert((!is_virtual && invoke_code == Bytecodes::_invokestatic ) || (!is_virtual && invoke_code == Bytecodes::_invokespecial) || (!is_virtual && invoke_code == Bytecodes::_invokehandle ) || (!is_virtual && invoke_code == Bytecodes::_invokedynamic) || ( is_virtual && invoke_code != Bytecodes::_invokestatic )) failed: inconsistent bytecode

              Assignee:
              Vladimir Ivanov
              Reporter:
              Vladimir Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: