8217760: C2: Missing symbolic info on a call from intrinsics when invoked through MethodHandle

Reviewed-by: thartmann, roland