src/hotspot/share/opto/matcher.cpp
@@ -1168,6 +1168,7 @@ MachNode *Matcher::match_sfpt( SafePointNode *sfpt ) {
     if( mcall->is_MachCallJava() ) {
       MachCallJavaNode *mcall_java  = mcall->as_MachCallJava();
       const CallJavaNode *call_java =  call->as_CallJava();
+      assert(call_java->validate_symbolic_info(), "inconsistent info");
       method = call_java->method();
       mcall_java->_method = method;
       mcall_java->_bci = call_java->_bci;
